--- a/app/src/main/res/layout/activity_troubleshoot.xml
+++ b/app/src/main/res/layout/activity_troubleshoot.xml
@@ -4,40 +4,10 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="16dp"
+    android:id="@+id/table_layout"
     android:background="@color/white"
-    tools:context="com.hdk.adsltrial.LoginActivity">
+    tools:context="com.hdk.adsltrial.SetupRouterActivity">
 
-
-
-    <TableRow>
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <TextView android:id="@+id/cabecera"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="12px"
-                android:text="TextView"/>
-
-            <TextView android:id="@+id/descripcion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="normal"
-                android:textSize="10px"
-                android:text="TextView" />
-
-        </LinearLayout>
-
-    </TableRow>
 
 </TableLayout>
